Add find_package support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -316,6 +316,22 @@ include_directories(BEFORE SYSTEM
   ${CMAKE_CURRENT_SOURCE_DIR}/include
   )
 
+
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CppInterOpConfig.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake/CppInterOpConfig.cmake
+  @ONLY)
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CppInterOpConfigVersion.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake/CppInterOpConfigVersion.cmake
+  @ONLY)
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake/
+  DESTINATION lib/cmake
+  FILES_MATCHING
+  PATTERN "*.cmake"
+  )
+
+
 install(DIRECTORY include/
   DESTINATION include
   FILES_MATCHING
