Fix version for find_package search

--- a/cmake/CppInterOpConfigVersion.cmake.in
+++ b/cmake/CppInterOpConfigVersion.cmake.in
@@ -1,4 +1,4 @@
-set(PACKAGE_VERSION "1.1.0")
+set(PACKAGE_VERSION "1.1~dev")
 
 # LLVM is API-compatible only with matching major.minor versions
 # and patch versions not less than that requested.
