--- a/cmake/CppInterOpConfigVersion.cmake.in
+++ b/cmake/CppInterOpConfigVersion.cmake.in
@@ -1,12 +1,12 @@
-set(PACKAGE_VERSION @INTEROP_PACKAGE_VERSION@)
+set(PACKAGE_VERSION @CPPINTEROP_VERSION@)
 
 # LLVM is API-compatible only with matching major.minor versions
 # and patch versions not less than that requested.
 
-if("@INTEROP_PACKAGE_VERSION_MM@" VERSION_EQUAL "${PACKAGE_FIND_VERSION_MAJOR}.${PACKAGE_FIND_VERSION_MINOR}"
-   AND NOT "@INTEROP_PACKAGE_VERSION_P@" VERSION_LESS "${PACKAGE_FIND_VERSION_PATCH}")
+if("@CPPINTEROP_VERSION_MAJOR@.@CPPINTEROP_VERSION_MINOR@" VERSION_EQUAL "${PACKAGE_FIND_VERSION_MAJOR}.${PACKAGE_FIND_VERSION_MINOR}"
+   AND NOT "@CPPINTEROP_VERSION_PATCH@" VERSION_LESS "${PACKAGE_FIND_VERSION_PATCH}")
   set(PACKAGE_VERSION_COMPATIBLE 1)
-  if("@INTEROP_PACKAGE_VERSION_P@" VERSION_EQUAL "${PACKAGE_FIND_VERSION_PATCH}")
+  if("@CPPINTEROP_VERSION_PATCH@" VERSION_EQUAL "${PACKAGE_FIND_VERSION_PATCH}")
     set(PACKAGE_VERSION_EXACT 1)
   endif()
 endif()
