--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -42,5 +42,6 @@ target_link_libraries(clangCppInterOp PRIVATE
 )
 
 set_source_files_properties(CppInterOp.cpp
-  PROPERTIES COMPILE_DEFINITIONS "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\"")
+  PROPERTIES COMPILE_DEFINITIONS "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\""
+             COMPILE_DEFINITIONS "CPPINTEROP_VERSION=\"${CPPINTEROP_VERSION}\"")
 
