--- a/cmake/CppInterOpConfigVersion.cmake.in
+++ b/cmake/CppInterOpConfigVersion.cmake.in
@@ -1,4 +1,4 @@
-set(PACKAGE_VERSION @CPPINTEROP_VERSION@)
+set(PACKAGE_VERSION "@CPPINTEROP_VERSION@")
 
 # LLVM is API-compatible only with matching major.minor versions
 # and patch versions not less than that requested.
