Move versions into a separate file (#151)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,12 @@ include_directories(BEFORE SYSTEM
   )
 
 
+file(READ "VERSION" CPPINTEROP_VERSION)
+string(REGEX MATCH "([0-9]*)\.([0-9]*)\.([0-9]*)" CPPINTEROP_VERSION_ONLY "${CPPINTEROP_VERSION}")
+set(CPPINTEROP_VERSION_MAJOR "${CMAKE_MATCH_1}")
+set(CPPINTEROP_VERSION_MINOR "${CMAKE_MATCH_2}")
+set(CPPINTEROP_VERSION_PATCH "${CMAKE_MATCH_3}")
+
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CppInterOpConfig.cmake.in
   ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake/CppInterOpConfig.cmake
