--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -41,6 +41,8 @@ target_link_libraries(clangCppInterOp PRIVATE
   dl
 )
 
-set_source_files_properties(CppInterOp.cpp
-  PROPERTIES COMPILE_DEFINITIONS "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\"")
+string(REPLACE ";" "\;" _VER CPPINTEROP_VERSION)
+set_source_files_properties(CppInterOp.cpp PROPERTIES COMPILE_DEFINITIONS
+  "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\";CPPINTEROP_VERSION=\"${_VAR}\""
+)
 
