Add an option to disable testing.
This is useful for packaging CppInterOp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -373,10 +373,13 @@ endif()
 option(CPPINTEROP_INCLUDE_DOCS "Generate build targets for the CppInterOp docs.")
 option(CPPINTEROP_ENABLE_DOXYGEN "Use doxygen to generate CppInterOp interal API documentation.")
 option(CPPINTEROP_ENABLE_SPHINX "Use sphinx to generage CppInterOp user documentation")
+option(CPPINTEROP_ENABLE_TESTING "Enables the testing infrastructure." ON)
 
 if (CPPINTEROP_INCLUDE_DOCS)
   add_subdirectory(docs)
 endif()
 
 add_subdirectory(lib)
-add_subdirectory(unittests)
+if (CPPINTEROP_ENABLE_TESTING)
+  add_subdirectory(unittests)
+endif(CPPINTEROP_ENABLE_TESTING)
