--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,11 +87,11 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     find_package(Clang REQUIRED CONFIG ${clang_search_hints} NO_DEFAULT_PATH)
     find_package(Cling REQUIRED CONFIG ${cling_search_hints} NO_DEFAULT_PATH)
   endif(USE_CLING)
-  if (USE_REPL)
-    message(STATUS "Mode USE_REPL = ON")
-    find_package(LLVM REQUIRED CONFIG ${llvm_search_hints} NO_DEFAULT_PATH)
-    find_package(Clang REQUIRED CONFIG ${clang_search_hints} NO_DEFAULT_PATH)
-  endif(USE_REPL)
+  #if (USE_REPL)
+  #  message(STATUS "Mode USE_REPL = ON")
+  #  find_package(LLVM REQUIRED CONFIG ${llvm_search_hints} NO_DEFAULT_PATH)
+  #  find_package(Clang REQUIRED CONFIG ${clang_search_hints} NO_DEFAULT_PATH)
+  #endif(USE_REPL)
 
   if (LLVM_FOUND)
     if (LLVM_PACKAGE_VERSION VERSION_LESS LLVM_MIN_SUPPORTED OR LLVM_PACKAGE_VERSION VERSION_GREATER_EQUAL LLVM_VERSION_UPPER_BOUND)
