--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -20,11 +20,6 @@ if (USE_REPL)
   #Use DML optional sources
 endif(USE_REPL)
 
-add_llvm_library(clangCppInterOp OBJECT
-  CppInterOp.cpp
-  ${DLM}
- )
-
 if (USE_CLING)
   set(cling_clang_interp clingInterpreter)
 endif()
@@ -32,7 +27,7 @@ if (USE_REPL)
   set(cling_clang_interp clangInterpreter)
 endif()
 
-target_link_libraries(clangCppInterOp PRIVATE
+set(link_libs
   ${cling_clang_interp}
   clangAST
   clangBasic
@@ -40,7 +35,56 @@ target_link_libraries(clangCppInterOp PRIVATE
   clangLex
   clangSema
   dl
-)
+  )
+
+# Get rid of libLLVM-X.so which is appended to the list of static libraries.
+if (LLVM_LINK_LLVM_DYLIB)
+  set(new_libs ${link_libs})
+  set(libs ${new_libs})
+  while(NOT "${new_libs}" STREQUAL "")
+    foreach(lib ${new_libs})
+      if(TARGET ${lib})
+        get_target_property(transitive_libs ${lib} INTERFACE_LINK_LIBRARIES)
+        if (NOT transitive_libs)
+          continue()
+        endif()
+        foreach(transitive_lib ${transitive_libs})
+          get_target_property(lib_type ${transitive_lib} TYPE)
+          if("${lib_type}" STREQUAL "STATIC_LIBRARY")
+            list(APPEND static_transitive_libs ${transitive_lib})
+          else()
+            # Filter our libLLVM.so and friends.
+            continue()
+          endif()
+          if(NOT ${transitive_lib} IN_LIST libs)
+            list(APPEND newer_libs ${transitive_lib})
+            list(APPEND libs ${transitive_lib})
+          endif()
+        endforeach(transitive_lib)
+        # Update the target properties with the list of only static libraries.
+        set_target_properties(${lib} PROPERTIES INTERFACE_LINK_LIBRARIES "${static_transitive_libs}")
+        set(static_transitive_libs "")
+      endif()
+    endforeach(lib)
+    set(new_libs ${newer_libs})
+    set(newer_libs "")
+  endwhile()
+  # We just got rid of the libLLVM.so and other components shipped as shared
+  # libraries, we need to make up for the missing dependency.
+  list(APPEND LLVM_LINK_COMPONENTS
+    Coverage
+    FrontendHLSL
+    LTO
+    )
+endif(LLVM_LINK_LLVM_DYLIB)
+
+add_llvm_library(clangCppInterOp
+  DISABLE_LLVM_LINK_LLVM_DYLIB
+  CppInterOp.cpp
+  ${DLM}
+  LINK_LIBS
+  ${link_libs}
+ )
 
 string(REPLACE ";" "\;" _VER CPPINTEROP_VERSION)
 set_source_files_properties(CppInterOp.cpp PROPERTIES COMPILE_DEFINITIONS
