--- a/unittests/CppInterOp/TestSharedLib/CMakeLists.txt
+++ b/unittests/CppInterOp/TestSharedLib/CMakeLists.txt
@@ -1,4 +1,8 @@
-add_llvm_library(TestSharedLib SHARED BUILDTREE_ONLY TestSharedLib.cpp)
+add_llvm_library(TestSharedLib
+  SHARED
+  DISABLE_LLVM_LINK_LLVM_DYLIB
+  BUILDTREE_ONLY
+  TestSharedLib.cpp)
 # Put TestSharedLib next to the unit test executable.
 set_output_directory(TestSharedLib
   BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/../
