Fix Cmake package return info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -312,7 +312,7 @@ include_directories(BEFORE SYSTEM
   )
 
 
-file(READ "VERSION" CPPINTEROP_VERSION)
+file(STRINGS "VERSION" CPPINTEROP_VERSION)
 string(REGEX MATCH "([0-9]*)\.([0-9]*)\.([0-9]*)" CPPINTEROP_VERSION_ONLY "${CPPINTEROP_VERSION}")
 set(CPPINTEROP_VERSION_MAJOR "${CMAKE_MATCH_1}")
 set(CPPINTEROP_VERSION_MINOR "${CMAKE_MATCH_2}")
