Fixes issues which occur when building on Apple Silicon
Stopped Cuda library been loaded when on Apple
sets CMAKE_SHARED_LIBRARY_SUFFIX without hardcoding

--- a/cmake/CppInterOp/CppInterOpConfig.cmake.in
+++ b/cmake/CppInterOp/CppInterOpConfig.cmake.in
@@ -6,6 +6,9 @@ get_filename_component(CPPINTEROP_INSTALL_PREFIX "${CPPINTEROP_INSTALL_PREFIX}" 
 get_filename_component(CPPINTEROP_INSTALL_PREFIX "${CPPINTEROP_INSTALL_PREFIX}" PATH)
 get_filename_component(CPPINTEROP_INSTALL_PREFIX "${CPPINTEROP_INSTALL_PREFIX}" PATH)
 
+# Determine CMAKE_SHARED_LIBRARY_SUFFIX based on operating system
+include(CMakeSystemSpecificInformation)
+
 ### build/install workaround
 
 if (IS_DIRECTORY "${CPPINTEROP_INSTALL_PREFIX}/include")
