Set an build config to run tests since VS is multi-config generator

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -40,7 +40,7 @@ endfunction()
  
 add_subdirectory(CppInterOp)
 
-add_custom_target(check-cppinterop COMMAND ${CMAKE_CTEST_COMMAND} -V
+add_custom_target(check-cppinterop COMMAND ${CMAKE_CTEST_COMMAND} -V --build-config $<CONFIG>
   DEPENDS CppInterOpUnitTests WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
 set_target_properties(check-cppinterop PROPERTIES FOLDER "CppInterOp tests")
