--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -306,8 +306,8 @@ jobs:
     - name: Setup default Build Type on Windows
       if: runner.os == 'windows'
       run: |
-        echo "BUILD_TYPE=Release" >> $GITHUB_ENV
-        echo "CODE_COVERAGE=0" >> $GITHUB_ENV
+        echo "BUILD_TYPE=Release" >> $env:GITHUB_ENV
+        echo "CODE_COVERAGE=0" >>  $env:GITHUB_ENV
         echo "ncpus=%NUMBER_OF_PROCESSORS%" 
         echo "ncpus=%NUMBER_OF_PROCESSORS%" >> $GITHUB_ENV
 
